Model Tests and solved problems.